// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example files basic-effects.jd 1`] = `
// hello.jd
const hash_d86e5ce8_0: () ={}> string = () => {
    "hello world";
}

// .ts
const hash_d86e5ce8: () => string = () => {
  return "hello world";
};

// sayHi.jd
const hash_3948926a_0: () ={}> void = () => {
    log(hash_d86e5ce8_0());
}

// .ts
const hash_3948926a: () => void = () => {
  return log(hash_d86e5ce8());
};

// collect.jd
const hash_13b88238_0: {e_0}(() ={hash_5e5d3d04_0, e_0}> void) ={e_0}> string = (
    fn_0: () ={hash_5e5d3d04_0, e_0}> void,
) => {
    handle! fn_0 {0((v_1) => k_2) => {
        v_1 ++ "\\n" ++ <self>(k_2);
    }, pure(a_1) => "end"};
}

// .ts
const hash_13b88238: (arg_0: (handlers: any, done: (result: void) => void) => void, handlers: any, done: (result: string) => void) => void = {
  direct: fn_0 => {
    let handle_ret_0;
    handleSimpleShallow2("5e5d3d04", fn_0, [(handlers, v_1, k_2) => {
      handle_ret_0 = function () {
        return v_1 + "\\n" + hash_13b88238.direct(k_2);
      }();
    }], (handlers, a_1) => {
      handle_ret_0 = "end";
    });
    return handle_ret_0;
  },
  effectful: (fn_0: (handlers: any, done: (result: void) => void) => void, handlers: any, done: (arg_0: string) => void) => {
    handleSimpleShallow2("5e5d3d04", fn_0, [(handlers, v_1, k_2) => {
      hash_13b88238.effectful(k_2, handlers, (handlers, arg_1_1) => {
        done(handlers, v_1 + "\\n" + arg_1_1);
      });
    }], (handlers, a_1) => {
      done(handlers, "end");
    }, handlers);
  }
};

// log.jd
const hash_5e0f2bd2_0: (string) ={hash_5e5d3d04_0}> void = (k_0: string) => raise!(
    hash_5e5d3d04_0(k_0),
)

// .ts
const hash_5e0f2bd2: (arg_0: string, handlers: any, done: (result: void) => void) => void = (k_0: string, handlers: any, done: (arg_0: void) => void) => {
  raise(handlers, "5e5d3d04", 0, k_0, done);
};

// respondWith.jd
const hash_49f3ee0a_0: (var_0_0) ={}> (() ={hash_c32ec300_0, hash_5e5d3d04_0}> T_0) ={
    hash_5e5d3d04_0,
}> T_0 = (responseValue_0: var_0_0) => (fn_1: () ={hash_c32ec300_0, hash_5e5d3d04_0}> T_0) => {
    handle! fn_1 {
        0(() => k_2) => <self>(responseValue_0 ++ ".")(() => k_2(responseValue_0)),
        1((v_2) => k_3) => {
            hash_5e0f2bd2_0(v_2);
            <self>(responseValue_0 ++ "-")(k_3);
        },
        pure(a_2) => a_2,
    };
}

// .ts
const hash_49f3ee0a: (arg_0: T_0) => <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (result: T_0) => void) => void = responseValue_0 => (fn_1: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (arg_0: T_0) => void) => {
  handleSimpleShallow2("c32ec300", fn_1, [(handlers, _, k_2) => {
    hash_49f3ee0a(responseValue_0 + ".")((handlers: any, done: (arg_0: T_0) => void) => {
      k_2(responseValue_0, handlers, done);
    }, handlers, done);
  }, (handlers, v_2, k_3) => {
    hash_5e0f2bd2(v_2, handlers, (handlers, _ignored) => {
      hash_49f3ee0a(responseValue_0 + "-")(k_3, handlers, done);
    });
  }], (handlers, a_2) => {
    done(handlers, a_2);
  }, handlers);
};

// farther.jd
const hash_5e087e3c_0: (string) ={hash_5e5d3d04_0, hash_c32ec300_0}> string = (name_0: string) => {
    hash_5e0f2bd2_0("yes please " ++ name_0);
    raise!(hash_c32ec300_0());
}

// .ts
const hash_5e087e3c: (arg_0: string, handlers: any, done: (result: string) => void) => void = (name_0: string, handlers: any, done: (arg_0: string) => void) => {
  hash_5e0f2bd2("yes please " + name_0, handlers, (handlers, _ignored) => {
    raise(handlers, "c32ec300", 0, null, done);
  });
};

// inner.jd
const hash_9e00ed42_0: (string) ={hash_5e5d3d04_0, hash_c32ec300_0}> void = (name_0: string) => {
    hash_5e0f2bd2_0(hash_5e087e3c_0("Folks") ++ " from farther");
    hash_5e0f2bd2_0("getting");
    hash_5e0f2bd2_0(name_0);
    hash_5e0f2bd2_0(raise!(hash_c32ec300_0()) ++ " and " ++ raise!(hash_c32ec300_0()));
    hash_5e0f2bd2_0("And then " ++ raise!(hash_c32ec300_0()));
    hash_5e0f2bd2_0("Dones");
}

// .ts
const hash_9e00ed42: (arg_0: string, handlers: any, done: (result: void) => void) => void = (name_0: string, handlers: any, done: (arg_0: void) => void) => {
  hash_5e087e3c("Folks", handlers, (handlers, arg_0_9) => {
    const arg_0_8 = arg_0_9 + " from farther";
    hash_5e0f2bd2(arg_0_8, handlers, (handlers, _ignored) => {
      hash_5e0f2bd2("getting", handlers, (handlers, _ignored) => {
        hash_5e0f2bd2(name_0, handlers, (handlers, _ignored) => {
          raise(handlers, "c32ec300", 0, null, (handlers, arg_0_5) => {
            const arg_0_4 = arg_0_5 + " and ";
            raise(handlers, "c32ec300", 0, null, (handlers, arg_1_4) => {
              const arg_0_3 = arg_0_4 + arg_1_4;
              hash_5e0f2bd2(arg_0_3, handlers, (handlers, _ignored) => {
                raise(handlers, "c32ec300", 0, null, (handlers, arg_1_2) => {
                  const arg_0_1 = "And then " + arg_1_2;
                  hash_5e0f2bd2(arg_0_1, handlers, (handlers, _ignored) => {
                    hash_5e0f2bd2("Dones", handlers, done);
                  });
                });
              });
            });
          });
        });
      });
    });
  });
};

// test1.jd
const hash_3a91a933_0: () ={hash_5e5d3d04_0}> void = () => {
    hash_49f3ee0a_0("<read>")(() => hash_9e00ed42_0("Yes"));
}

// .ts
const hash_3a91a933: (handlers: any, done: (result: void) => void) => void = (handlers: any, done: (arg_0: void) => void) => {
  hash_49f3ee0a("<read>")((handlers: any, done: (arg_0: void) => void) => {
    hash_9e00ed42("Yes", handlers, done);
  }, handlers, done);
};

// .jd
hash_13b88238_0(hash_3a91a933_0) == "yes please Folks\\n<read> from farther\\ngetting\\nYes\\n<read>. and <read>..\\nAnd then <read>...\\nDones\\nend"

// .ts
hash_13b88238.direct(hash_3a91a933) == "yes please Folks\\n<read> from farther\\ngetting\\nYes\\n<read>. and <read>..\\nAnd then <read>...\\nDones\\nend";

// maybeRaise.jd
const hash_bc0c13ec_0: (bool) ={hash_c32ec300_0}> string = (shouldRaise_0: bool) => {
    if shouldRaise_0 {
        raise!(hash_c32ec300_0());
    } else {
        "didn't raise";
    };
}

// .ts
const hash_bc0c13ec: (arg_0: bool, handlers: any, done: (result: string) => void) => void = (shouldRaise_0: bool, handlers: any, done: (arg_0: string) => void) => {
  if (shouldRaise_0) {
    raise(handlers, "c32ec300", 0, null, done);
  } else {
    done(handlers, "didn't raise");
  }
};

// test2.jd
const hash_15d9e504_0: () ={hash_5e5d3d04_0}> void = () => {
    hash_49f3ee0a_0("<read>")(
        () => hash_5e0f2bd2_0(hash_bc0c13ec_0(true) ++ hash_bc0c13ec_0(false)),
    );
}

// .ts
const hash_15d9e504: (handlers: any, done: (result: void) => void) => void = (handlers: any, done: (arg_0: void) => void) => {
  hash_49f3ee0a("<read>")((handlers: any, done: (arg_0: void) => void) => {
    hash_bc0c13ec(true, handlers, (handlers, arg_0_2) => {
      hash_bc0c13ec(false, handlers, (handlers, arg_1_2) => {
        const arg_0_1 = arg_0_2 + arg_1_2;
        hash_5e0f2bd2(arg_0_1, handlers, done);
      });
    });
  }, handlers, done);
};

// .jd
hash_13b88238_0(hash_15d9e504_0) == "<read>didn't raise\\nend"

// .ts
hash_13b88238.direct(hash_15d9e504) == "<read>didn't raise\\nend";

// raiseIf.jd
const hash_9ce8eba8_0: (string) ={hash_c32ec300_0}> string = (check_0: string) => {
    if raise!(hash_c32ec300_0()) == check_0 {
        raise!(hash_c32ec300_0());
    } else {
        "didn't raise";
    };
}

// .ts
const hash_9ce8eba8: (arg_0: string, handlers: any, done: (result: string) => void) => void = (check_0: string, handlers: any, done: (arg_0: string) => void) => {
  raise(handlers, "c32ec300", 0, null, (handlers, arg_0_0) => {
    const cond = arg_0_0 == check_0;

    if (cond) {
      raise(handlers, "c32ec300", 0, null, done);
    } else {
      done(handlers, "didn't raise");
    }
  });
};

// test3.jd
const hash_83c47568_0: () ={hash_5e5d3d04_0}> void = () => {
    hash_5e0f2bd2_0(hash_49f3ee0a_0("<read>")(() => hash_9ce8eba8_0("<read>")));
}

// .ts
const hash_83c47568: (handlers: any, done: (result: void) => void) => void = (handlers: any, done: (arg_0: void) => void) => {
  hash_49f3ee0a("<read>")((handlers: any, done: (arg_0: string) => void) => {
    hash_9ce8eba8("<read>", handlers, done);
  }, handlers, (handlers, arg_0_0) => {
    hash_5e0f2bd2(arg_0_0, handlers, done);
  });
};

// .jd
hash_13b88238_0(hash_83c47568_0) == "<read>.\\nend"

// .ts
hash_13b88238.direct(hash_83c47568) == "<read>.\\nend";

// letBind.jd
const hash_72fa217e_0: () ={hash_c32ec300_0, hash_5e5d3d04_0}> void = () => {
    const x_0 = raise!(hash_c32ec300_0());
    hash_5e0f2bd2_0(x_0 ++ "Hello");
}

// .ts
const hash_72fa217e: (handlers: any, done: (result: void) => void) => void = (handlers: any, done: (arg_0: void) => void) => {
  raise(handlers, "c32ec300", 0, null, (handlers, x_0) => {
    hash_5e0f2bd2(x_0 + "Hello", handlers, done);
  });
};

// test4.jd
const hash_2011c9e0_0: () ={hash_5e5d3d04_0}> void = () => {
    hash_49f3ee0a_0("<read>")(hash_72fa217e_0);
}

// .ts
const hash_2011c9e0: (handlers: any, done: (result: void) => void) => void = (handlers: any, done: (arg_0: void) => void) => {
  hash_49f3ee0a("<read>")(hash_72fa217e, handlers, done);
};

// .jd
hash_13b88238_0(hash_2011c9e0_0) == "<read>Hello\\nend"

// .ts
hash_13b88238.direct(hash_2011c9e0) == "<read>Hello\\nend";
`;

exports[`Example files basics.jd 1`] = `
// .jd
true

// .ts
true;

// .jd
"hi" == "hi"

// .ts
"hi" == "hi";

// freturn.jd
const hash_458b4792_0: () ={}> string = () => "yes"

// .ts
const hash_458b4792: () => string = () => "yes";

// .jd
hash_458b4792_0() == "yes"

// .ts
hash_458b4792() == "yes";

// arg.jd
const hash_b7db6c8c_0: (string) ={}> string = (arg_0: string) => arg_0 ++ "1"

// .ts
const hash_b7db6c8c: (arg_0: string) => string = arg_0 => arg_0 + "1";

// .jd
hash_b7db6c8c_0("2") == "21"

// .ts
hash_b7db6c8c("2") == "21";

// identity.jd
const hash_4b02455c_0: (T_0) ={}> T_0 = (x_0: T_0) => x_0

// .ts
const hash_4b02455c: <T_0>(arg_0: T_0) => T_0 = x_0 => x_0;

// .jd
hash_4b02455c_0("5") ++ "4" == "54"

// .ts
hash_4b02455c("5") + "4" == "54";

// provideString.jd
const hash_0db60336_0: (string) ={}> (() ={hash_e97b5320_0}> string) ={}> string = (
    responseValue_0: string,
) => (fn_1: () ={hash_e97b5320_0}> string) => {
    handle! fn_1 {
        0(() => k_2) => <self>(responseValue_0 ++ ".")(() => k_2(responseValue_0)),
        pure(a_2) => a_2,
    };
}

// .ts
const hash_0db60336: (arg_0: string) => (arg_0: (handlers: any, done: (result: string) => void) => void) => string = responseValue_0 => fn_1 => {
  let handle_ret_0;
  handleSimpleShallow2("e97b5320", fn_1, [(handlers, _, k_2) => {
    handle_ret_0 = hash_0db60336(responseValue_0 + ".")((handlers: any, done: (arg_0: string) => void) => {
      k_2(responseValue_0, handlers, done);
    });
  }], (handlers, a_2) => {
    handle_ret_0 = a_2;
  });
  return handle_ret_0;
};

// .jd
hash_0db60336_0("hi")(() => "m") == "m"

// .ts
hash_0db60336("hi")((handlers: any, done: (arg_0: string) => void) => {
  done(handlers, "m");
}) == "m";

// impure.jd
const hash_3139382a_0: () ={hash_e97b5320_0}> string = () => "A"

// .ts
const hash_3139382a: (handlers: any, done: (result: string) => void) => void = (handlers: any, done: (arg_0: string) => void) => {
  done(handlers, "A");
};

// .jd
hash_0db60336_0("hi")(hash_3139382a_0) == "A"

// .ts
hash_0db60336("hi")(hash_3139382a) == "A";

// pure.jd
const hash_d1d55d60_0: () ={}> string = () => "AA"

// .ts
const hash_d1d55d60: () => string = () => "AA";

// .jd
hash_0db60336_0("hi")(hash_d1d55d60_0) == "AA"

// .ts
hash_0db60336("hi")((handlers: any, done: (arg_0: string) => void) => {
  done(handlers, hash_d1d55d60());
}) == "AA";

// .jd
hash_0db60336_0("hi")(() => "m") == "m"

// .ts
hash_0db60336("hi")((handlers: any, done: (arg_0: string) => void) => {
  done(handlers, "m");
}) == "m";

// provideStringWithArg.jd
const hash_5a4a125c_0: (string) ={}> (string, (string) ={hash_e97b5320_0}> string) ={}> string = (
    responseValue_0: string,
) => (passIn_1: string, fn_2: (string) ={hash_e97b5320_0}> string) => {
    handle! () => fn_2(passIn_1) {
        0(() => k_3) => hash_0db60336_0(responseValue_0 ++ ".")(() => k_3(responseValue_0)),
        pure(a_3) => a_3,
    };
}

// .ts
const hash_5a4a125c: (arg_0: string) => (arg_0: string, arg_1: (arg_0: string, handlers: any, done: (result: string) => void) => void) => string = responseValue_0 => (passIn_1, fn_2) => {
  let handle_ret_0;
  handleSimpleShallow2("e97b5320", (handlers: any, done: (arg_0: string) => void) => {
    fn_2(passIn_1, handlers, done);
  }, [(handlers, _, k_3) => {
    handle_ret_0 = hash_0db60336(responseValue_0 + ".")((handlers: any, done: (arg_0: string) => void) => {
      k_3(responseValue_0, handlers, done);
    });
  }], (handlers, a_3) => {
    handle_ret_0 = a_3;
  });
  return handle_ret_0;
};

// .jd
hash_5a4a125c_0("hi")("Passed in", (arg_0: string) => arg_0 ++ "-m") == "Passed in-m"

// .ts
hash_5a4a125c("hi")("Passed in", (arg_0_0: string, handlers: any, done: (arg_0: string) => void) => {
  done(handlers, (arg_0 => arg_0 + "-m")(arg_0_0));
}) == "Passed in-m";
`;

exports[`Example files conditionals.jd 1`] = `
// x.jd
const hash_3476d823_0: int = if 10 > 2 {
    5;
} else {
    4;
}

// .ts
const hash_3476d823: number = function () {
  if (10 > 2) {
    return 5;
  } else {
    return 4;
  }
}();

// y.jd
const hash_97b3a0e0_0: (int) ={}> int = (h_0: int) => if h_0 < 10 {
    h_0 / 2;
} else {
    h_0 * 3;
}

// .ts
const hash_97b3a0e0: (arg_0: number) => number = h_0 => {
  if (h_0 < 10) {
    return h_0 / 2;
  } else {
    return h_0 * 3;
  }
};
`;

exports[`Example files eff-paper.jd 1`] = `
// tee.jd
const hash_0042122c_0: (string) ={}> string = (x_0: string) => {
    log("> " ++ x_0);
    x_0;
}

// .ts
const hash_0042122c: (arg_0: string) => string = x_0 => {
  log("> " + x_0);
  return x_0;
};

// print.jd
const hash_655ce332_0: (string) ={hash_bd07b0c0_0}> void = (x_0: string) => raise!(
    hash_bd07b0c0_0(x_0),
)

// .ts
const hash_655ce332: (arg_0: string, handlers: any, done: (result: void) => void) => void = (x_0: string, handlers: any, done: (arg_0: void) => void) => {
  raise(handlers, "bd07b0c0", 0, x_0, done);
};

// read.jd
const hash_2d0f0bb2_0: () ={hash_7ec4051c_0}> string = () => raise!(hash_7ec4051c_0())

// .ts
const hash_2d0f0bb2: (handlers: any, done: (result: string) => void) => void = (handlers: any, done: (arg_0: string) => void) => {
  raise(handlers, "7ec4051c", 0, null, done);
};

// alwaysRead.jd
const hash_28be7d60_0: {e_0}(string, () ={hash_7ec4051c_0, e_0}> T_0) ={e_0}> T_0 = (
    value_0: string,
    fn_1: () ={hash_7ec4051c_0, e_0}> T_0,
) => {
    handle! fn_1 {0(() => k_2) => {
        <self>(value_0, () => k_2(value_0));
    }, pure(a_2) => a_2};
}

// .ts
const hash_28be7d60: <T_0>(arg_0: string, arg_1: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (result: T_0) => void) => void = {
  direct: (value_0, fn_1) => {
    let handle_ret_0;
    handleSimpleShallow2("7ec4051c", fn_1, [(handlers, _, k_2) => {
      handle_ret_0 = function () {
        return hash_28be7d60.direct(value_0, (handlers: any, done: (arg_0: T_0) => void) => {
          k_2(value_0, handlers, done);
        });
      }();
    }], (handlers, a_2) => {
      handle_ret_0 = a_2;
    });
    return handle_ret_0;
  },
  effectful: (value_0: string, fn_1: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (arg_0: T_0) => void) => {
    handleSimpleShallow2("7ec4051c", fn_1, [(handlers, _, k_2) => {
      hash_28be7d60.effectful(value_0, (handlers: any, done: (arg_0: T_0) => void) => {
        k_2(value_0, handlers, done);
      }, handlers, done);
    }], (handlers, a_2) => {
      done(handlers, a_2);
    }, handlers);
  }
};

// collect.jd
const hash_28223472_0: {e_0}(() ={hash_bd07b0c0_0, e_0}> void) ={e_0}> string = (
    fn_0: () ={hash_bd07b0c0_0, e_0}> void,
) => {
    handle! fn_0 {0((v_1) => k_2) => {
        v_1 ++ "\\n" ++ <self>(k_2);
    }, pure(a_1) => "end"};
}

// .ts
const hash_28223472: (arg_0: (handlers: any, done: (result: void) => void) => void, handlers: any, done: (result: string) => void) => void = {
  direct: fn_0 => {
    let handle_ret_0;
    handleSimpleShallow2("bd07b0c0", fn_0, [(handlers, v_1, k_2) => {
      handle_ret_0 = function () {
        return v_1 + "\\n" + hash_28223472.direct(k_2);
      }();
    }], (handlers, a_1) => {
      handle_ret_0 = "end";
    });
    return handle_ret_0;
  },
  effectful: (fn_0: (handlers: any, done: (result: void) => void) => void, handlers: any, done: (arg_0: string) => void) => {
    handleSimpleShallow2("bd07b0c0", fn_0, [(handlers, v_1, k_2) => {
      hash_28223472.effectful(k_2, handlers, (handlers, arg_1_1) => {
        done(handlers, v_1 + "\\n" + arg_1_1);
      });
    }], (handlers, a_1) => {
      done(handlers, "end");
    }, handlers);
  }
};

// .jd
hash_28223472_0(
    () => {
        raise!(hash_bd07b0c0_0("one"));
        raise!(hash_bd07b0c0_0("two"));
        raise!(hash_bd07b0c0_0("three"));
    },
) == "one\\ntwo\\nthree\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  raise(handlers, "bd07b0c0", 0, "one", (handlers, _ignored) => {
    raise(handlers, "bd07b0c0", 0, "two", (handlers, _ignored) => {
      raise(handlers, "bd07b0c0", 0, "three", done);
    });
  });
}) == "one\\ntwo\\nthree\\nend";

// .jd
hash_28223472_0(() => {
    hash_655ce332_0("HI");
}) == "HI\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_655ce332("HI", handlers, done);
}) == "HI\\nend";

// .jd
hash_28223472_0(() => {
    hash_655ce332_0("HI");
    hash_655ce332_0("HO");
}) == "HI\\nHO\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_655ce332("HI", handlers, (handlers, _ignored) => {
    hash_655ce332("HO", handlers, done);
  });
}) == "HI\\nHO\\nend";

// .jd
hash_28223472_0(() => {
    raise!(hash_bd07b0c0_0("HI"));
    raise!(hash_bd07b0c0_0("HO"));
}) == "HI\\nHO\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  raise(handlers, "bd07b0c0", 0, "HI", (handlers, _ignored) => {
    raise(handlers, "bd07b0c0", 0, "HO", done);
  });
}) == "HI\\nHO\\nend";

// .jd
hash_28223472_0(
    () => hash_28be7d60_0(
        "hi",
        () => hash_655ce332_0(raise!(hash_7ec4051c_0()) ++ " and " ++ raise!(hash_7ec4051c_0())),
    ),
) == "hi and hi\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_28be7d60.effectful("hi", (handlers: any, done: (arg_0: void) => void) => {
    raise(handlers, "7ec4051c", 0, null, (handlers, arg_0_6) => {
      const arg_0_5 = arg_0_6 + " and ";
      raise(handlers, "7ec4051c", 0, null, (handlers, arg_1_5) => {
        const arg_0_4 = arg_0_5 + arg_1_5;
        hash_655ce332(arg_0_4, handlers, done);
      });
    });
  }, handlers, done);
}) == "hi and hi\\nend";

// .jd
hash_28223472_0(() => {
    hash_655ce332_0("A");
    hash_655ce332_0("B");
}) == "A\\nB\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_655ce332("A", handlers, (handlers, _ignored) => {
    hash_655ce332("B", handlers, done);
  });
}) == "A\\nB\\nend";

// .jd
hash_28223472_0(
    () => hash_28be7d60_0(
        "hi",
        () => {
            hash_655ce332_0(hash_2d0f0bb2_0());
            hash_655ce332_0("YA");
            hash_655ce332_0(hash_2d0f0bb2_0());
            hash_655ce332_0("B");
        },
    ),
) == "hi\\nYA\\nhi\\nB\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_28be7d60.effectful("hi", (handlers: any, done: (arg_0: void) => void) => {
    hash_2d0f0bb2(handlers, (handlers, arg_0_14) => {
      hash_655ce332(arg_0_14, handlers, (handlers, _ignored) => {
        hash_655ce332("YA", handlers, (handlers, _ignored) => {
          hash_2d0f0bb2(handlers, (handlers, arg_0_11) => {
            hash_655ce332(arg_0_11, handlers, (handlers, _ignored) => {
              hash_655ce332("B", handlers, done);
            });
          });
        });
      });
    });
  }, handlers, done);
}) == "hi\\nYA\\nhi\\nB\\nend";

// .jd
hash_28223472_0(
    () => hash_28be7d60_0(
        "hi",
        () => {
            raise!(hash_bd07b0c0_0("A"));
            const x_0 = raise!(hash_7ec4051c_0());
            raise!(hash_bd07b0c0_0("B"));
        },
    ),
) == "A\\nB\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_28be7d60.effectful("hi", (handlers: any, done: (arg_0: void) => void) => {
    raise(handlers, "bd07b0c0", 0, "A", (handlers, _ignored) => {
      raise(handlers, "7ec4051c", 0, null, (handlers, x_0) => {
        raise(handlers, "bd07b0c0", 0, "B", done);
      });
    });
  }, handlers, done);
}) == "A\\nB\\nend";

// .jd
hash_28223472_0(
    () => hash_28be7d60_0(
        "hi",
        () => {
            const x_0 = raise!(hash_7ec4051c_0());
            raise!(hash_bd07b0c0_0("B"));
        },
    ),
) == "B\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_28be7d60.effectful("hi", (handlers: any, done: (arg_0: void) => void) => {
    raise(handlers, "7ec4051c", 0, null, (handlers, x_0) => {
      raise(handlers, "bd07b0c0", 0, "B", done);
    });
  }, handlers, done);
}) == "B\\nend";

// printFullName.jd
const hash_ea2fbc38_0: () ={hash_bd07b0c0_0, hash_7ec4051c_0}> void = () => {
    hash_655ce332_0("What is your forename?");
    const foreName_0 = raise!(hash_7ec4051c_0());
    hash_655ce332_0("What is your surname?");
    const surName_1 = raise!(hash_7ec4051c_0());
    hash_655ce332_0(foreName_0 ++ " " ++ surName_1);
}

// .ts
const hash_ea2fbc38: (handlers: any, done: (result: void) => void) => void = (handlers: any, done: (arg_0: void) => void) => {
  hash_655ce332("What is your forename?", handlers, (handlers, _ignored) => {
    raise(handlers, "7ec4051c", 0, null, (handlers, foreName_0) => {
      hash_655ce332("What is your surname?", handlers, (handlers, _ignored) => {
        raise(handlers, "7ec4051c", 0, null, (handlers, surName_1) => {
          hash_655ce332(foreName_0 + " " + surName_1, handlers, done);
        });
      });
    });
  });
};

// .jd
hash_28223472_0(() => {
    hash_28be7d60_0("Me", hash_ea2fbc38_0);
}) == "What is your forename?\\nWhat is your surname?\\nMe Me\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_28be7d60.effectful("Me", hash_ea2fbc38, handlers, done);
}) == "What is your forename?\\nWhat is your surname?\\nMe Me\\nend";

// reverse.jd
const hash_02399fe2_0: (() ={hash_bd07b0c0_0}> void) ={hash_bd07b0c0_0}> void = (
    fn_0: () ={hash_bd07b0c0_0}> void,
) => {
    handle! fn_0 {0((v_1) => k_2) => {
        <self>(k_2);
        hash_655ce332_0(v_1);
    }, pure(a_1) => a_1};
}

// .ts
const hash_02399fe2: (arg_0: (handlers: any, done: (result: void) => void) => void, handlers: any, done: (result: void) => void) => void = (fn_0: (handlers: any, done: (result: void) => void) => void, handlers: any, done: (arg_0: void) => void) => {
  handleSimpleShallow2("bd07b0c0", fn_0, [(handlers, v_1, k_2) => {
    hash_02399fe2(k_2, handlers, (handlers, _ignored) => {
      hash_655ce332(v_1, handlers, done);
    });
  }], (handlers, a_1) => {
    done(handlers, a_1);
  }, handlers);
};

// .jd
hash_28223472_0(() => hash_02399fe2_0(() => {
    hash_655ce332_0("A");
    hash_655ce332_0("B");
})) == "B\\nA\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_02399fe2((handlers: any, done: (arg_0: void) => void) => {
    hash_655ce332("A", handlers, (handlers, _ignored) => {
      hash_655ce332("B", handlers, done);
    });
  }, handlers, done);
}) == "B\\nA\\nend";

// .jd
hash_28223472_0(() => {
    hash_02399fe2_0(() => {
        hash_28be7d60_0("Me", hash_ea2fbc38_0);
    });
}) == "Me Me\\nWhat is your surname?\\nWhat is your forename?\\nend"

// .ts
hash_28223472.direct((handlers: any, done: (arg_0: void) => void) => {
  hash_02399fe2((handlers: any, done: (arg_0: void) => void) => {
    hash_28be7d60.effectful("Me", hash_ea2fbc38, handlers, done);
  }, handlers, done);
}) == "Me Me\\nWhat is your surname?\\nWhat is your forename?\\nend";

// decide.jd
const hash_7c767344_0: () ={hash_ad6c762c_0}> bool = () => raise!(hash_ad6c762c_0())

// .ts
const hash_7c767344: (handlers: any, done: (result: bool) => void) => void = (handlers: any, done: (arg_0: bool) => void) => {
  raise(handlers, "ad6c762c", 0, null, done);
};

// choose.jd
const hash_2a6b5988_0: (T_0, T_0) ={hash_ad6c762c_0}> T_0 = (x_0: T_0, y_1: T_0) => {
    if hash_7c767344_0() {
        x_0;
    } else {
        y_1;
    };
}

// .ts
const hash_2a6b5988: <T_0>(arg_0: T_0, arg_1: T_0, handlers: any, done: (result: T_0) => void) => void = (x_0: T_0, y_1: T_0, handlers: any, done: (arg_0: T_0) => void) => {
  hash_7c767344(handlers, (handlers, cond) => {
    if (cond) {
      done(handlers, x_0);
    } else {
      done(handlers, y_1);
    }
  });
};

// pickTrue.jd
const hash_47c1cf0b_0: (() ={hash_ad6c762c_0}> T_0) ={}> T_0 = (fn_0: () ={hash_ad6c762c_0}> T_0) => handle! fn_0 {
    0(() => k_1) => <self>(() => k_1(true)),
    pure(x_1) => x_1,
}

// .ts
const hash_47c1cf0b: <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void) => T_0 = fn_0 => {
  let handle_ret_24;
  handleSimpleShallow2("ad6c762c", fn_0, [(handlers, _, k_1) => {
    handle_ret_24 = hash_47c1cf0b((handlers: any, done: (arg_0: T_0) => void) => {
      k_1(true, handlers, done);
    });
  }], (handlers, x_1) => {
    handle_ret_24 = x_1;
  });
  return handle_ret_24;
};

// chooseDiff.jd
const hash_4ba48c0c_0: () ={hash_ad6c762c_0}> int = () => {
    const x1_0 = hash_2a6b5988_0(15, 30);
    const x2_1 = hash_2a6b5988_0(5, 10);
    x1_0 - x2_1;
}

// .ts
const hash_4ba48c0c: (handlers: any, done: (result: number) => void) => void = (handlers: any, done: (arg_0: number) => void) => {
  hash_2a6b5988(15, 30, handlers, (handlers, x1_0) => {
    hash_2a6b5988(5, 10, handlers, (handlers, x2_1) => {
      done(handlers, x1_0 - x2_1);
    });
  });
};

// .jd
hash_47c1cf0b_0(hash_4ba48c0c_0) == 10

// .ts
hash_47c1cf0b(hash_4ba48c0c) == 10;

// pickMax.jd
const hash_48a0dabc_0: (() ={hash_ad6c762c_0}> int) ={}> int = (fn_0: () ={hash_ad6c762c_0}> int) => handle! fn_0 {
    0(() => k_1) => {
        const xt_2 = <self>(() => k_1(true));
        const xf_3 = <self>(() => k_1(false));
        if xt_2 > xf_3 {
            xt_2;
        } else {
            xf_3;
        };
    },
    pure(x_1) => x_1,
}

// .ts
const hash_48a0dabc: (arg_0: (handlers: any, done: (result: number) => void) => void) => number = fn_0 => {
  let handle_ret_24;
  handleSimpleShallow2("ad6c762c", fn_0, [(handlers, _, k_1) => {
    handle_ret_24 = function () {
      const xt_2 = hash_48a0dabc((handlers: any, done: (arg_0: number) => void) => {
        k_1(true, handlers, done);
      });
      const xf_3 = hash_48a0dabc((handlers: any, done: (arg_0: number) => void) => {
        k_1(false, handlers, done);
      });

      if (xt_2 > xf_3) {
        return xt_2;
      } else {
        return xf_3;
      }
    }();
  }], (handlers, x_1) => {
    handle_ret_24 = x_1;
  });
  return handle_ret_24;
};

// .jd
hash_48a0dabc_0(hash_4ba48c0c_0) == 25

// .ts
hash_48a0dabc(hash_4ba48c0c) == 25;

// decide.jd
const hash_470b5cc0_0: () ={hash_ad6c762c_0}> bool = () => raise!(hash_ad6c762c_0())

// .ts
const hash_470b5cc0: (handlers: any, done: (result: bool) => void) => void = (handlers: any, done: (arg_0: bool) => void) => {
  raise(handlers, "ad6c762c", 0, null, done);
};

// fail.jd
const hash_bf701d0c_0: () ={hash_a434c9b8_0}> int = () => raise!(hash_a434c9b8_0())

// .ts
const hash_bf701d0c: (handlers: any, done: (result: number) => void) => void = (handlers: any, done: (arg_0: number) => void) => {
  raise(handlers, "a434c9b8", 0, null, done);
};

// chooseInt.jd
const hash_80f50864_0: (int, int) ={hash_a434c9b8_0, hash_ad6c762c_0}> int = (m_0: int, n_1: int) => {
    if m_0 > n_1 {
        hash_bf701d0c_0();
        10;
    } else {
        if hash_470b5cc0_0() {
            m_0;
        } else {
            <self>(m_0 + 1, n_1);
        };
    };
}

// .ts
const hash_80f50864: (arg_0: number, arg_1: number, handlers: any, done: (result: number) => void) => void = (m_0: number, n_1: number, handlers: any, done: (arg_0: number) => void) => {
  if (m_0 > n_1) {
    hash_bf701d0c(handlers, (handlers, _ignored) => {
      done(handlers, 10);
    });
  } else {
    hash_470b5cc0(handlers, (handlers, cond) => {
      if (cond) {
        done(handlers, m_0);
      } else {
        hash_80f50864(m_0 + 1, n_1, handlers, done);
      }
    });
  }
};

// pythagorean.jd
const hash_74d2e984_0: (int, int) ={hash_a434c9b8_0, hash_ad6c762c_0}> string = (m_0: int, n_1: int) => {
    const a_2 = hash_80f50864_0(m_0, n_1 - 1);
    const b_3 = hash_80f50864_0(a_2 + 1, n_1);
    const a2_4 = a_2 * a_2;
    const b2_5 = b_3 * b_3;
    if isSquare(a2_4 + b2_5) {
        intToString(a_2) ++ ":" ++ intToString(b_3);
    } else {
        hash_bf701d0c_0();
        "??? how did this return";
    };
}

// .ts
const hash_74d2e984: (arg_0: number, arg_1: number, handlers: any, done: (result: string) => void) => void = (m_0: number, n_1: number, handlers: any, done: (arg_0: string) => void) => {
  hash_80f50864(m_0, n_1 - 1, handlers, (handlers, a_2) => {
    hash_80f50864(a_2 + 1, n_1, handlers, (handlers, b_3) => {
      const a2_4 = a_2 * a_2;
      const b2_5 = b_3 * b_3;

      if (isSquare(a2_4 + b2_5)) {
        done(handlers, intToString(a_2) + ":" + intToString(b_3));
      } else {
        hash_bf701d0c(handlers, (handlers, _ignored) => {
          done(handlers, "??? how did this return");
        });
      }
    });
  });
};

// handleFail.jd
const hash_5160ce1a_0: {e_0}(() ={e_0, hash_a434c9b8_0}> T_0, () ={e_0}> T_0) ={e_0}> T_0 = (
    fn_0: () ={e_0, hash_a434c9b8_0}> T_0,
    orElse_1: () ={e_0}> T_0,
) => handle! fn_0 {0(() => __2) => orElse_1(), pure(x_2) => x_2}

// .ts
const hash_5160ce1a: <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void, arg_1: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (result: T_0) => void) => void = {
  direct: (fn_0, orElse_1) => {
    let handle_ret_24;
    handleSimpleShallow2("a434c9b8", fn_0, [(handlers, _, __2) => {
      handle_ret_24 = orElse_1();
    }], (handlers, x_2) => {
      handle_ret_24 = x_2;
    });
    return handle_ret_24;
  },
  effectful: (fn_0: (handlers: any, done: (result: T_0) => void) => void, orElse_1: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (arg_0: T_0) => void) => {
    handleSimpleShallow2("a434c9b8", fn_0, [(handlers, _, __2) => {
      orElse_1(handlers, done);
    }], (handlers, x_2) => {
      done(handlers, x_2);
    }, handlers);
  }
};

// backtrack.jd
const hash_2c7faa32_0: (() ={hash_ad6c762c_0, hash_a434c9b8_0}> T_0) ={hash_a434c9b8_0}> T_0 = (
    fn_0: () ={hash_ad6c762c_0, hash_a434c9b8_0}> T_0,
) => {
    handle! fn_0 {
        0(() => k_1) => {
            <self>(() => hash_5160ce1a_0(() => k_1(true), () => k_1(false)));
        },
        pure(x_1) => x_1,
    };
}

// .ts
const hash_2c7faa32: <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (result: T_0) => void) => void = (fn_0: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (arg_0: T_0) => void) => {
  handleSimpleShallow2("ad6c762c", fn_0, [(handlers, _, k_1) => {
    hash_2c7faa32((handlers: any, done: (arg_0: T_0) => void) => {
      hash_5160ce1a.effectful((handlers: any, done: (arg_0: T_0) => void) => {
        k_1(true, handlers, done);
      }, (handlers: any, done: (arg_0: T_0) => void) => {
        k_1(false, handlers, done);
      }, handlers, done);
    }, handlers, done);
  }], (handlers, x_1) => {
    done(handlers, x_1);
  }, handlers);
};

// backtrackReverse.jd
const hash_78fb0285_0: (() ={hash_ad6c762c_0, hash_a434c9b8_0}> T_0) ={hash_a434c9b8_0}> T_0 = (
    fn_0: () ={hash_ad6c762c_0, hash_a434c9b8_0}> T_0,
) => {
    handle! fn_0 {
        0(() => k_1) => {
            <self>(() => hash_5160ce1a_0(() => k_1(false), () => k_1(true)));
        },
        pure(x_1) => x_1,
    };
}

// .ts
const hash_78fb0285: <T_0>(arg_0: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (result: T_0) => void) => void = (fn_0: (handlers: any, done: (result: T_0) => void) => void, handlers: any, done: (arg_0: T_0) => void) => {
  handleSimpleShallow2("ad6c762c", fn_0, [(handlers, _, k_1) => {
    hash_78fb0285((handlers: any, done: (arg_0: T_0) => void) => {
      hash_5160ce1a.effectful((handlers: any, done: (arg_0: T_0) => void) => {
        k_1(false, handlers, done);
      }, (handlers: any, done: (arg_0: T_0) => void) => {
        k_1(true, handlers, done);
      }, handlers, done);
    }, handlers, done);
  }], (handlers, x_1) => {
    done(handlers, x_1);
  }, handlers);
};

// backtrackPythag.jd
const hash_4c038d20_0: (int, int) ={}> string = (m_0: int, n_1: int) => hash_5160ce1a_0(
    () => hash_2c7faa32_0(() => hash_74d2e984_0(m_0, n_1)),
    () => "No solution found",
)

// .ts
const hash_4c038d20: (arg_0: number, arg_1: number) => string = (m_0, n_1) => hash_5160ce1a.direct((handlers: any, done: (arg_0: string) => void) => {
  hash_2c7faa32((handlers: any, done: (arg_0: string) => void) => {
    hash_74d2e984(m_0, n_1, handlers, done);
  }, handlers, done);
}, () => "No solution found");

// .jd
hash_4c038d20_0(4, 15) == "5:12"

// .ts
hash_4c038d20(4, 15) == "5:12";

// .jd
hash_4c038d20_0(7, 10) == "No solution found"

// .ts
hash_4c038d20(7, 10) == "No solution found";

// backtrackPythagReverse.jd
const hash_45fc4af8_0: (int, int) ={}> string = (m_0: int, n_1: int) => hash_5160ce1a_0(
    () => hash_78fb0285_0(() => hash_74d2e984_0(m_0, n_1)),
    () => "No solution found",
)

// .ts
const hash_45fc4af8: (arg_0: number, arg_1: number) => string = (m_0, n_1) => hash_5160ce1a.direct((handlers: any, done: (arg_0: string) => void) => {
  hash_78fb0285((handlers: any, done: (arg_0: string) => void) => {
    hash_74d2e984(m_0, n_1, handlers, done);
  }, handlers, done);
}, () => "No solution found");

// .jd
hash_45fc4af8_0(4, 15) == "9:12"

// .ts
hash_45fc4af8(4, 15) == "9:12";

// .jd
10

// .ts
10;

// withInitialValue.jd
const hash_1bf6f3d4_0: (int, () ={hash_28b29b9c_0}> T_0) ={}> T_0 = (
    value_0: int,
    fn_1: () ={hash_28b29b9c_0}> T_0,
) => {
    handle! fn_1 {
        0(() => k_2) => <self>(value_0, () => k_2(value_0)),
        1((newValue_2) => k_3) => <self>(newValue_2, k_3),
        pure(x_2) => x_2,
    };
}

// .ts
const hash_1bf6f3d4: <T_0>(arg_0: number, arg_1: (handlers: any, done: (result: T_0) => void) => void) => T_0 = (value_0, fn_1) => {
  let handle_ret_24;
  handleSimpleShallow2("28b29b9c", fn_1, [(handlers, _, k_2) => {
    handle_ret_24 = hash_1bf6f3d4(value_0, (handlers: any, done: (arg_0: T_0) => void) => {
      k_2(value_0, handlers, done);
    });
  }, (handlers, newValue_2, k_3) => {
    handle_ret_24 = hash_1bf6f3d4(newValue_2, k_3);
  }], (handlers, x_2) => {
    handle_ret_24 = x_2;
  });
  return handle_ret_24;
};

// getAndSet.jd
const hash_7f360cc4_0: () ={hash_28b29b9c_0}> string = () => {
    const x_0 = raise!(hash_28b29b9c_0());
    raise!(hash_28b29b9c_0(x_0 + 4));
    intToString(x_0) ++ ":" ++ intToString(raise!(hash_28b29b9c_0()));
}

// .ts
const hash_7f360cc4: (handlers: any, done: (result: string) => void) => void = (handlers: any, done: (arg_0: string) => void) => {
  raise(handlers, "28b29b9c", 0, null, (handlers, x_0) => {
    raise(handlers, "28b29b9c", 1, x_0 + 4, (handlers, _ignored) => {
      const arg_0_24 = intToString(x_0) + ":";
      raise(handlers, "28b29b9c", 0, null, (handlers, arg_0_25) => {
        const arg_1_24 = intToString(arg_0_25);
        done(handlers, arg_0_24 + arg_1_24);
      });
    });
  });
};

// .jd
hash_1bf6f3d4_0(10, hash_7f360cc4_0) == "10:14"

// .ts
hash_1bf6f3d4(10, hash_7f360cc4) == "10:14";

// callPlus5.jd
const hash_36dde1fe_0: {e_0}(() ={e_0}> int) ={e_0}> int = (x_0: () ={e_0}> int) => x_0() + 5

// .ts
const hash_36dde1fe: (arg_0: (handlers: any, done: (result: number) => void) => void, handlers: any, done: (result: number) => void) => void = {
  direct: x_0 => x_0() + 5,
  effectful: (x_0: (handlers: any, done: (result: number) => void) => void, handlers: any, done: (arg_0: number) => void) => {
    x_0(handlers, (handlers, arg_0_24) => {
      done(handlers, arg_0_24 + 5);
    });
  }
};

// .jd
hash_1bf6f3d4_0(4, () => hash_36dde1fe_0(() => raise!(hash_28b29b9c_0()))) == 9

// .ts
hash_1bf6f3d4(4, (handlers: any, done: (arg_0: number) => void) => {
  hash_36dde1fe.effectful((handlers: any, done: (arg_0: number) => void) => {
    raise(handlers, "28b29b9c", 0, null, done);
  }, handlers, done);
}) == 9;

// .jd
hash_36dde1fe_0(() => 4) == 9

// .ts
hash_36dde1fe.direct(() => 4) == 9;
`;

exports[`Example files generics.jd 1`] = `
// identity.jd
const hash_6b1ed602_0: (T_0) ={}> T_0 = (x_0: T_0) => x_0

// .ts
const hash_6b1ed602: <T_0>(arg_0: T_0) => T_0 = x_0 => x_0;

// get2.jd
const hash_02c7aa44_0: int = hash_6b1ed602_0(2)

// .ts
const hash_02c7aa44: number = hash_6b1ed602(2);

// callme.jd
const hash_131566d0_0: ((T_0) ={}> T_0, T_0) ={}> T_0 = (x_0: (T_0) ={}> T_0, arg_1: T_0) => x_0(
    arg_1,
)

// .ts
const hash_131566d0: <T_0>(arg_0: (arg_0: T_0) => T_0, arg_1: T_0) => T_0 = (x_0, arg_1) => x_0(arg_1);

// addTwo.jd
const hash_61ed882a_0: (int) ={}> int = (one_0: int) => one_0 + 2

// .ts
const hash_61ed882a: (arg_0: number) => number = one_0 => one_0 + 2;

// callIt.jd
const hash_4d83a4a2_0: int = hash_131566d0_0(hash_61ed882a_0, 5)

// .ts
const hash_4d83a4a2: number = hash_131566d0(hash_61ed882a, 5);

// scopeIt.jd
const hash_60fd21e0_0: (int) ={}> (int) ={}> int = (x_0: int) => (y_1: int) => x_0 + y_1

// .ts
const hash_60fd21e0: (arg_0: number) => (arg_0: number) => number = x_0 => y_1 => x_0 + y_1;

// ten.jd
const hash_69ee0898_0: int = hash_60fd21e0_0(4)(6)

// .ts
const hash_69ee0898: number = hash_60fd21e0(4)(6);
`;

exports[`Example files inference.jd 1`] = `
// callOne.jd
const hash_fc7dac8a_0: ((int, string) ={}> T_0) ={}> T_0 = (f_0: (int, string) ={}> T_0) => f_0(
    2,
    "hi",
)

// .ts
const hash_fc7dac8a: <T_0>(arg_0: (arg_0: number, arg_1: string) => T_0) => T_0 = f_0 => f_0(2, "hi");

// inferrRecur.jd
const hash_b46ae9d0_0: (int) ={}> int = (count_0: int) => <self>(count_0 + 4)

// .ts
const hash_b46ae9d0: (arg_0: number) => number = count_0 => hash_b46ae9d0(count_0 + 4);
`;

exports[`Example files lets.jd 1`] = `
// x.jd
const hash_13b40fa4_0: int = {
    const y_0 = 10;
    y_0;
}

// .ts
const hash_13b40fa4: number = function () {
  const y_0 = 10;
  return y_0;
}();

// .jd
hash_13b40fa4_0 == 10

// .ts
hash_13b40fa4 == 10;

// z.jd
const hash_d4d5b090_0: (int) ={}> int = (n_0: int) => {
    const m_1 = n_0 + 2;
    m_1 - 1;
}

// .ts
const hash_d4d5b090: (arg_0: number) => number = n_0 => {
  const m_1 = n_0 + 2;
  return m_1 - 1;
};

// .jd
hash_d4d5b090_0(10) == 11

// .ts
hash_d4d5b090(10) == 11;
`;

exports[`Type errors Expression 0 3 == "4" 1`] = `"Binops must have same-typed arguments"`;

exports[`Type errors Expression 2 hello(5) 1`] = `
"Wrong type for arg 0: 
Found: int
but expected string : {\\"start\\":{\\"offset\\":110,\\"line\\":7,\\"column\\":1},\\"end\\":{\\"offset\\":118,\\"line\\":7,\\"column\\":9}}"
`;

exports[`Type errors Expression 4 count(hello("m")) 1`] = `
"Wrong type for arg 0: 
Found: string
but expected int : {\\"start\\":{\\"offset\\":152,\\"line\\":11,\\"column\\":1},\\"end\\":{\\"offset\\":169,\\"line\\":11,\\"column\\":18}}"
`;

exports[`Type errors Expression 6 identity<int>("hello") 1`] = `
"Wrong type for arg 0: 
Found: string
but expected int : {\\"start\\":{\\"offset\\":243,\\"line\\":18,\\"column\\":1},\\"end\\":{\\"offset\\":265,\\"line\\":18,\\"column\\":23}}"
`;

exports[`Type errors Expression 7 count(identity<string>("hello")) 1`] = `
"Wrong type for arg 0: 
Found: string
but expected int : {\\"start\\":{\\"offset\\":286,\\"line\\":21,\\"column\\":1},\\"end\\":{\\"offset\\":318,\\"line\\":21,\\"column\\":33}}"
`;

exports[`Type errors Expression 8 <T,>(x: T): int => x 1`] = `"Explicit type variable T#0 can't unify with int - 24:9-24:10 : 24:13-24:16"`;

exports[`Type errors Expression 9 <T,>(x: int): T => x 1`] = `"Unable to unify int [object Object] with type variable T#0 [object Object]"`;

exports[`Type errors Expression 11 () ={}> raise!(GetString.get()) 1`] = `"Function is declared as pure, but is not. 1 effects found."`;

exports[`Type errors Expression 12 <T>(ok: T): string => hello(ok) 1`] = `"Explicit type variable T#0 can't unify with string - 36:9-36:10 : 5:22-5:28"`;

exports[`Type errors Expression 13 (ok: string) => ok + 2 1`] = `"first arg to + wrong type"`;

exports[`Type errors Expression 14 () => {
    const x = "hello";
    x + 2
} 1`] = `"first arg to + wrong type"`;

exports[`Type errors Expression 15 (fn: (string) => string) => {
    const x = fn(4);
    x ++ "hi"
} 1`] = `
"Wrong type for arg 0: 
Found: int
but expected string : {\\"start\\":{\\"offset\\":649,\\"line\\":46,\\"column\\":15},\\"end\\":{\\"offset\\":654,\\"line\\":46,\\"column\\":20}}"
`;

exports[`Type errors Expression 16 (fn: () => string) => {
    const x: int = fn();
    x + 2
} 1`] = `"Value of const doesn't match type annotation. string, expected int"`;

exports[`Type errors Expression 17 (fn: () => string) => {
    const x = fn();
    x + 2
} 1`] = `"first arg to + wrong type"`;

exports[`Type errors Expression 18 if "hello" { 3 } else { 4 } 1`] = `"Condition of if must be a boolean"`;

exports[`Type errors Expression 19 if true { 3 } else { "4" } 1`] = `"Branches of if dont agree"`;

exports[`Type errors Expression 20 {
    const x = 4;
    x(2)
} 1`] = `"Trying to call {\\"type\\":\\"id\\",\\"text\\":\\"x\\",\\"location\\":{\\"start\\":{\\"offset\\":890,\\"line\\":69,\\"column\\":5},\\"end\\":{\\"offset\\":891,\\"line\\":69,\\"column\\":6}}} but its a ref : {\\"type\\":\\"ref\\",\\"location\\":{\\"start\\":{\\"offset\\":883,\\"line\\":68,\\"column\\":15},\\"end\\":{\\"offset\\":884,\\"line\\":68,\\"column\\":16}},\\"ref\\":{\\"type\\":\\"builtin\\",\\"name\\":\\"int\\"}}"`;

exports[`Type errors Expression 21 log("a", "b") 1`] = `
"Wrong number of arguments {
  \\"type\\": \\"apply\\",
  \\"target\\": {
    \\"type\\": \\"id\\",
    \\"text\\": \\"log\\",
    \\"location\\": {
      \\"start\\": {
        \\"offset\\": 898,
        \\"line\\": 72,
        \\"column\\": 1
      },
      \\"end\\": {
        \\"offset\\": 901,
        \\"line\\": 72,
        \\"column\\": 4
      }
    }
  },
  \\"args\\": [
    {
      \\"typevbls\\": [],
      \\"effectVbls\\": null,
      \\"args\\": [
        {
          \\"type\\": \\"string\\",
          \\"text\\": \\"a\\",
          \\"location\\": {
            \\"start\\": {
              \\"offset\\": 902,
              \\"line\\": 72,
              \\"column\\": 5
            },
            \\"end\\": {
              \\"offset\\": 905,
              \\"line\\": 72,
              \\"column\\": 8
            }
          }
        },
        {
          \\"type\\": \\"string\\",
          \\"text\\": \\"b\\",
          \\"location\\": {
            \\"start\\": {
              \\"offset\\": 907,
              \\"line\\": 72,
              \\"column\\": 10
            },
            \\"end\\": {
              \\"offset\\": 910,
              \\"line\\": 72,
              \\"column\\": 13
            }
          }
        }
      ]
    }
  ],
  \\"location\\": {
    \\"start\\": {
      \\"offset\\": 898,
      \\"line\\": 72,
      \\"column\\": 1
    },
    \\"end\\": {
      \\"offset\\": 911,
      \\"line\\": 72,
      \\"column\\": 14
    }
  }
}"
`;

exports[`Type errors Expression 22 undefinedVbl 1`] = `"Undefined identifier undefinedVbl"`;

exports[`Type errors Expression 23 (): string => 5 1`] = `"Return type of lambda doesn't fit type declaration"`;

exports[`Type errors Expression 25 () ={GetString}> raise!(GetInt.get()) 1`] = `"Function declared with explicit effects, but missing at least one: hash_0302d45c_0"`;

exports[`Type errors Expression 26 handle! () => 4 {
    GetString.get(() => k) => 4,
    GetInt.get(() => k) => 5,
    pure(x) => x,
} 1`] = `"Can't handle multiple effects in one handler."`;

exports[`Type errors Expression 27 handle! () => 4 {
    Undef.get(() => k) => 5,
    pure(x) => x,
} 1`] = `"No effect named Undef"`;

exports[`Type errors Expression 28 handle! () => 4 {
    GetString.get(() => k) => 4,
    pure(x) => "hi",
} 1`] = `"All case arms must have the same return type: int string"`;

exports[`Type errors Expression 29 raise!(Undef.get()) 1`] = `"Unknown effect Undef"`;
